--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap&family=Caveat:wght@400..700&display=swap');
 
 * {
     margin: 0;
@@ -17,7 +17,8 @@ header {
     width: 100%;
     z-index: 100;
 }
-header h1 {
+header h2 {
+    font-family: "Caveat", cursive;;
     font-size: 40px;
     color: white;
 }
@@ -71,7 +72,8 @@ header nav:hover > a:not(:hover) {
 
 .about {
     padding: 50px;
-    background: #3B3291;
+    background: linear-gradient(to top, #D2E2FB 30%, #3B3291);
+
     color: white;
     position: relative;
     z-index: 100;
