--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap&family=Caveat:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Kalam:wght@300;400;700&display=swap');
 
 * {
     margin: 0;
@@ -18,9 +18,9 @@ header {
     z-index: 100;
 }
 header h2 {
-    font-family: "Caveat", cursive;;
+    font-family:  "Kalam", cursive;
     font-size: 40px;
-    color: white;
+    color: linear-gradient(to top, #86A8DB 30%, #D2E2FB );
 }
 header nav {
     display: flex;
@@ -62,6 +62,7 @@ header nav:hover > a:not(:hover) {
 
 .home .title {
     position: absolute;
+    font-family: "Great Vibes", cursive;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -73,7 +74,6 @@ header nav:hover > a:not(:hover) {
 .about {
     padding: 50px;
     background: linear-gradient(to top, #D2E2FB 30%, #3B3291);
-
     color: white;
     position: relative;
     z-index: 100;
